# http-getty

./: Cargo.toml  PKGBUILD
src/: main.rs
src/lib/: mod.rs
src/lib/cli/: mod.rs
src/lib/core/: methods.rs  mod.rs
src/lib/error/: mod.rs
