[package]
name = "http-getty"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "http_getty_lib"
path = "src/lib/mod.rs"
[dependencies]
http = "0.2.8"
reqwest = "0.11.11"
thiserror = "1.0.34"
tokio = { version = "1.21.0", features = ["macros", "rt", "rt-multi-thread", "full"] }
url = "2.3.1"
downcast-rs = "1.2.0"
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
indicatif = "0.17.0"
serde_json = "1.0.85"
